# openpose_ros

openpose_ros/: CMakeLists.txt  package.xml
openpose_ros/include/: openpose3dficator.h
openpose_ros/launch/: openpose_ros.launch
openpose_ros/src/: gflags_options.cpp  openpose.cpp  openpose3dficator.cpp  openpose3dfy.cpp
openpose_ros_msgs/: CMakeLists.txt
openpose_ros_msgs/msg/: OpenPoseHuman3d.msg  OpenPoseHumanList3d.msg
